Worked on creating Today Card in JS

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./Assets/style.css" />
-    <title>Weather Wire</title>
+    <title>Weather Dashboard</title>
   </head>
 
   <body>
     <header
       class="container-fluid text-center text-white bg-dark p-2 weather-header"
     >
-      <h1>Weather Wire</h1>
+      <h1>Weather Dashboard</h1>
     </header>
 
     <!-- max-width for ultra wide resolutions -->
@@ -20,7 +20,7 @@
       <div class="row">
         <aside class="col-lg-3 pb-3">
           <h2 id="form-heading" class="mt-1 h3 form-label">
-            Search by City:
+            Search for a City:
           </h2>
           <form id="search-form" class="form">
             <div class="form-inline form-group">
